--- a/index.html
+++ b/index.html
@@ -36,30 +36,79 @@
                             </div>
                             <button type="submit" class="btn btn-block">Login</button>
                         </form>
-                        <span>If you don't have an account,<a href="#">sign up</a></span>
+                        <span>If you don't have an account,<a href="signup.html">sign up</a></span>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-12 payment-title">
+                    <h5>Authorize Agent</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="payment-logo">
+                        <ul>
+                            <li>
+                                <a href="">
+                                    <img src="./img/BKash.wine.svg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/Nagod.wine.svg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/rocket.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/upay.jpg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/ok wallet.jpg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/meghna.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/firstcase.jpg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/sure cash.png" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./img/ssl.jpg" alt="">
+                                </a>
+                            </li>
+
+                        </ul>
                     </div>
                 </div>
                 <div class="col-md-3"></div>
             </div>
             <div class="row">
-                <div class="col-md-12">
-                    <div class="login-form-bottom-logo">
-                        <img src="./img/logo.png" alt="">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="footer-section">
+
                     </div>
                 </div>
-                <div class="col-md-12">
-                    <div class="login-form-content">
-                        <p>Export Import Bank Of Bangladesh Limited</p>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="login-form-footer">
-                        <h6>Copyright @2023,All Right Reserved.</h6>
-                        <p>Developed by,information Technology Limited.</p>
-                    </div>
-                </div>
+                <div class="col-md-3"></div>
             </div>
-        </div>
     </div>
 
     <!-- Optional JavaScript -->
